--- a/FilaPedido/FilaPedido.csproj
+++ b/FilaPedido/FilaPedido.csproj
@@ -55,12 +55,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Impressao.xaml.cs">
+      <DependentUpon>Impressao.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Senha.xaml.cs">
       <DependentUpon>Senha.xaml</DependentUpon>
     </Compile>
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
+    <Page Include="Impressao.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
